--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "leaflet": "^1.7.1",
+    "moment": "^2.29.1",
     "single-spa-vue": "^2.1.0",
     "vue": "^2.6.14",
     "vue2-leaflet": "^2.7.1"
